unpackaged/main/default/objects/Logistics__c/Logistics__c.object-meta.xml
<CustomObject>
    <description>Object to track all event related logistics</description>
    <label>Logistic</label>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>Logistics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>