unpackaged/main/default/objects/Logistics__c/fields/FS_A_V_Equipment__c.field-meta.xml
<CustomField>
    <fullName>FS_A_V_Equipment__c</fullName>
    <description>A/V Equipment</description>
    <label>A/V Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>