unpackaged/main/default/objects/Logistics__c/fields/FS_BEO_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_BEO_ID__c</fullName>
    <description>BEO ID from Schedule Item</description>
    <formula>FS_Schedule__r.FS_BEO_ID__c</formula>
    <inlineHelpText>BEO ID from Schedule Item</inlineHelpText>
    <label>BEO ID</label>
    <type>Text</type>
</CustomField>