unpackaged/main/default/objects/Logistics__c/fields/FS_CLE_Material__c.field-meta.xml
<CustomField>
    <fullName>FS_CLE_Material__c</fullName>
    <description>CLE Material</description>
    <label>CLE Material</label>
    <type>TextArea</type>
</CustomField>