unpackaged/main/default/objects/Logistics__c/fields/FS_Dietary__c.field-meta.xml
<CustomField>
    <fullName>FS_Dietary__c</fullName>
    <description>Dietary</description>
    <label>Dietary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>