unpackaged/main/default/objects/Logistics__c/fields/FS_Event__c.field-meta.xml
<CustomField>
    <fullName>FS_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Event tied to the logistic record</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>