unpackaged/main/default/objects/Logistics__c/fields/FS_Event_Registration_Table_Staffing__c.field-meta.xml
<CustomField>
    <fullName>FS_Event_Registration_Table_Staffing__c</fullName>
    <description>Event Registration Table Staffing</description>
    <label>Event Registration Table Staffing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>