unpackaged/main/default/objects/Logistics__c/fields/FS_Final_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Guarantee__c</fullName>
    <description>Final Guarantee</description>
    <label>Final Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>