unpackaged/main/default/objects/Logistics__c/fields/FS_Floor__c.field-meta.xml
<CustomField>
    <fullName>FS_Floor__c</fullName>
    <formula>FS_Room__r.FS_Floor__c</formula>
    <inlineHelpText>Room's floor number - auto-populated if value filled on room tied to the event/schedule item</inlineHelpText>
    <label>Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>