unpackaged/main/default/objects/Logistics__c/fields/FS_Food_Beverage__c.field-meta.xml
<CustomField>
    <fullName>FS_Food_Beverage__c</fullName>
    <description>Enter Food &amp; Beverages related data</description>
    <inlineHelpText>Enter Food &amp; Beverages related data</inlineHelpText>
    <label>Food &amp; Beverage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>