unpackaged/main/default/objects/Logistics__c/fields/FS_Hotel_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Hotel_Notes__c</fullName>
    <description>Hotel Notes</description>
    <label>Hotel Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>