unpackaged/main/default/objects/Logistics__c/fields/FS_Liaison_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Liaison_Name__c</fullName>
    <description>Liaison Name from Events Responsible Staff field</description>
    <formula>FS_Event__r.FS_Responsible_Staff__r.FirstName &amp;" "&amp; FS_Event__r.FS_Responsible_Staff__r.LastName</formula>
    <inlineHelpText>Liaison Name from Events Responsible Staff field</inlineHelpText>
    <label>Liaison Name</label>
    <type>Text</type>
</CustomField>