unpackaged/main/default/objects/Logistics__c/fields/FS_NYSBA_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_NYSBA_Notes__c</fullName>
    <description>NYSBA Notes</description>
    <label>NYSBA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>