unpackaged/main/default/objects/Logistics__c/fields/FS_Outside_Vendor__c.field-meta.xml
<CustomField>
    <fullName>FS_Outside_Vendor__c</fullName>
    <description>Outside Vendor</description>
    <label>Outside Vendor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>