unpackaged/main/default/objects/Logistics__c/fields/FS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FS_Quantity__c</fullName>
    <inlineHelpText>Quantity of the logistic item needed</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>