unpackaged/main/default/objects/Logistics__c/fields/FS_Room__c.field-meta.xml
<CustomField>
    <fullName>FS_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Room tied to the logistics</inlineHelpText>
    <label>Room</label>
    <referenceTo>EventApi__Room__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>