unpackaged/main/default/objects/Logistics__c/fields/FS_Room_Setup__c.field-meta.xml
<CustomField>
    <fullName>FS_Room_Setup__c</fullName>
    <label>Room Setup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>