unpackaged/main/default/objects/Logistics__c/fields/FS_Room_Sign_Copy__c.field-meta.xml
<CustomField>
    <fullName>FS_Room_Sign_Copy__c</fullName>
    <description>Room Sign Copy</description>
    <label>Room Sign Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>