unpackaged/main/default/objects/Logistics__c/fields/FS_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FS_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Event session/schedule tied to the logistic</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>