unpackaged/main/default/objects/Logistics__c/fields/FS_Set__c.field-meta.xml
<CustomField>
    <fullName>FS_Set__c</fullName>
    <description>Set</description>
    <label>Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>