unpackaged/main/default/objects/Logistics__c/fields/FS_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>