unpackaged/main/default/objects/Logistics__c/fields/FS_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Cost__c</fullName>
    <formula>FS_Quantity__c  *  FS_Unit_Cost__c</formula>
    <inlineHelpText>Total cost of logistic item</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>