unpackaged/main/default/objects/Logistics__c/fields/FS_Total_Number_Of_Signs__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Number_Of_Signs__c</fullName>
    <description>Total Number Of Signs</description>
    <label>Total Number Of Signs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>