unpackaged/main/default/objects/Logistics__c/fields/FS_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Type__c</fullName>
    <inlineHelpText>Type of logistic</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Monitors</fullName>
            </value>
            <value>
                <fullName>Booths</fullName>
            </value>
            <value>
                <fullName>Microphone</fullName>
            </value>
            <value>
                <fullName>Notepads</fullName>
            </value>
            <value>
                <fullName>Pens</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Recording Equipment</fullName>
            </value>
            <value>
                <fullName>Tabletop</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>