unpackaged/main/default/objects/Logistics__c/fields/FS_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>FS_Unit_Cost__c</fullName>
    <inlineHelpText>Cost per each logistic item</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>