unpackaged/main/default/objects/Logistics__c/fields/FS_Wifi__c.field-meta.xml
<CustomField>
    <fullName>FS_Wifi__c</fullName>
    <description>Wifi</description>
    <label>Wifi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>